--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Quadrilaterals</title>
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
     
     </head>    
 
